--- a/main.adoc
+++ b/main.adoc
@@ -1,11 +1,11 @@
 :title: Companion Requirements
 :project: Project
 :version: 1.0
-:author: JM Bruel
+:author: J.-M. Bruel
 :email: bruel@irit.fr
 :organization: IRIT/CNRS - University of Toulouse, France
 :icons: font
-{title}
+= {title}
 {author},{email}
 {version} -- {localdate}
 
@@ -19,12 +19,13 @@
 :bug: icon:bug[]
 :missing: icon:times-circle[]
 // GLOSSARY ENTRIES
+:jmb: https://jmbruel.netlify.app[{author}]
 :companion: <<companion, Companion Book>>
 :handbook:  <<handbook, Handbook>>
 
 [NOTE]
 ====
-This document constitutes the requirements book of the {companion}[Requirements Handbook Companion].
+This document constitutes the requirements book of the {companionURL}[Requirements Handbook Companion].
 It follows the method presented in the {HandbookPDF}[Handbook of requirements and business analysis].
 It uses the Asciidoc template available {companionGit}/blob/issue-14-Write_an_Asciidoc_template_for_PEGS/templates/asciidoc/book.adoc[here].
 ====
@@ -33,17 +34,27 @@ It uses the Asciidoc template available {companionGit}/blob/issue-14-Write_an_As
 
 === P.1 Responsibilities
 
+[[p11]]
+The writing effort of the {companion} is under the reponsibility of {jmb}.
+
 === P.2 Imposed technical choices
+
+[[p21]]
+The {companion} should be written in English.
+
+[[p22]]
+The {companion} should be published in one of the compatible inputs of the publisher.
+
 
 === P.3 Personnel characteristics and constraints
 
-=== P.4 List of tasks
+=== P.4 Schedule, milestones, and deliverables
 
-=== P.5 Schedule, milestones, and deliverables
+=== P.5 Description of individual steps and tasks
 
-=== P.6 Individual task descriptions
+=== P.6 Risks and mitigation analysis
 
-=== P.7 Risks and mitigation analysis
+=== P.7 Requirements process and report
 
 == Environment
 
@@ -126,10 +137,10 @@ Here is a non-exhaustive list of the stakeholders.
 .Production side stakeholders
 [cols="1,1,3",,options="header"]
 |===
-| Stakeholder | Category | Comment 
+| Stakeholder    | Category | Comment 
 //----------------------------------------------
 | Bertrand Meyer | Domain Expert | Author of the {handbook}, and main evaluator of the {companion}
-| Jean-Michel Bruel | Project Manager | Author and effort leader of the {companion}
+| {jmb}          | Project Manager | Author and effort leader of the {companion}
 |===
 //----------------------------------------------
 
