--- a/main.adoc
+++ b/main.adoc
@@ -5,6 +5,12 @@
 :email: bruel@irit.fr
 :organization: IRIT/CNRS - University of Toulouse, France
 :icons: font
+//--------------------------- PDF version
+:doctype: book
+:title-page-background-image: image::pegs.svg[pdfwidth=60%]
+// :title-logo-image: image::pegs.svg[top=1%, align=left, pdfwidth=2.5in]
+:back-cover-image: image::pegs.svg[pdfwidth=160%]
+
 = {title}
 {author},{email}
 {version} -- {localdate}
@@ -23,6 +29,8 @@
 :companion: <<companion, Companion Book>>
 :Handbook:  <<Handbook, Handbook>>
 
+
+
 [NOTE]
 ====
 This document constitutes the requirements book of the {companionURL}[Requirements Handbook Companion].
@@ -34,43 +42,8 @@ include::goals.adoc[]
 
 include::environment.adoc[]
 
-== Process
+include::process.adoc[]
 
-=== P.1 Responsibilities
+include::system.adoc[]
 
-[[p11]]
-The writing effort of the {companion} is under the responsibility of {jmb}.
-
-=== P.2 Imposed technical choices
-
-[[p21]]
-The {companion} should be written in English.
-
-[[p22]]
-The {companion} should be published in one of the compatible inputs of the publisher.
-
-
-=== P.3 Personnel characteristics and constraints
-
-=== P.4 Schedule, milestones, and deliverables
-
-=== P.5 Description of individual steps and tasks
-
-=== P.6 Risks and mitigation analysis
-
-=== P.7 Requirements process and report
-
-
-
-== System
-
-=== S.1 List of components
-
-=== S.2 Provided functionality
-
-=== S.3 Provided interfaces
-
-=== S.4 Example scenarios
-
-=== S.5 Prioritization
 
