--- a/environment.adoc
+++ b/environment.adoc
@@ -1,8 +1,22 @@
+//------------------------------------
+// ENVIRONMENT book
+//
+// Template for requirement:
+//[[ex-keyword]] 
+//`{counter:environment}`
+// Requirement
+
+// {missing} [Corresponding Artifact]
+//------------------------------------
 == Environment
 
 === E.1 Glossary
 
-In this section, we define the domain-specific terms used in this document.
+This section defines the domain-specific terms used in this document.
+
+It also lists the icons used in this document.
+
+==== `{counter:environment}` Terms
 
 [[companion]]
 {companion}:: The _system_ to be developed.  
@@ -10,7 +24,9 @@ In this section, we define the domain-specific terms used in this document.
 [[Handbook]]
 {Handbook}:: The book, entitled "Handbook of requirements and business analysis"; written by Bertrand Meyer (see PDF {HandbookPDF}[here]); and for which the {companion} serves as complementary material.
 
-Besides, here is the list of significations for the icons used when tracing the corresponding artifacts:
+==== `{counter:environment}` Icons
+
+Here is the list of significations for the icons used when tracing the corresponding artifacts:
 
 //----------------------------------------------
 .Icons signification
