--- a/system.adoc
+++ b/system.adoc
@@ -1,12 +1,15 @@
 
 == System
 
-=== S.1 List of components
+=== S.1 Components
 
-=== S.2 Provided functionality
+=== S.2 Functionality
 
-=== S.3 Provided interfaces
+=== S.3 Interfaces
 
-=== S.4 Example scenarios
+=== S.4 Scenarios (use cases, user stories)
 
 === S.5 Prioritization
+
+=== S.6 Verification and acceptance criteria
+
