--- a/main.adoc
+++ b/main.adoc
@@ -1,6 +1,6 @@
 :title: Companion Requirements
 :project: Project
-:version: 1.1
+:version: 1.2
 :author: J.-M. Bruel
 :email: bruel@irit.fr
 :organization: IRIT/CNRS - University of Toulouse, France
@@ -25,10 +25,15 @@
 :bug: icon:bug[]
 :missing: icon:times-circle[]
 // GLOSSARY ENTRIES
-:jmb: https://jmbruel.netlify.app[{author}]
 :companion: <<companion, Companion Book>>
 :Handbook:  <<Handbook, Handbook>>
-
+// PERSONS ENTRIES
+:an: Alexandr Naumchev
+:bm: Bertrand Meyer
+:fg: Florian Galinier
+:jmb: https://jmbruel.netlify.app[J.-M. Bruel]
+:mn: Marya Naumchev
+:se: Sophie Ebersold
 
 
 [NOTE]
