--- a/goals.adoc
+++ b/goals.adoc
@@ -10,6 +10,7 @@
 // {missing} [Corresponding Artifact]
 //---- 
 //------------------------------------
+:toc: macro
 
 == Goals
 
@@ -18,8 +19,8 @@
 ====
 // Title (whether or not on a separate title page).
 // Date of current publication and revision history.
-// Table of contents and any other appropriate tables, such as a table of illustrations. (But not the
-// glossary, which is part of the contents, as section E.1.)
+// Table of contents and any other appropriate tables, such as a table of illustrations. (But not the glossary, which is part of the contents, as section E.1.)
+toc::[] 
 // Copyright notice, distribution information, restrictions on distribution.
 // Approval information. 
 ====
@@ -30,12 +31,15 @@
 [[g1-mainGoal]]
 `{counter:g1}`
 The main purpose of the {companion} is to complement the  {Handbook} by providing useful additional material, examples, templates, and full {method} use cases.
-
-{missing} [Corresponding Artifact]
 //---- 
 
 
 === G.2 Current situation
+
+//---- Requirement
+[[g2-current]]
+`{counter:g2}`
+The only available material is the current status of the {Handbook}.
 
 === G.3 Expected benefits 
 
@@ -44,7 +48,7 @@ The main purpose of the {companion} is to complement the  {Handbook} by providin
 `{counter:g3}`
 <<readerC, Readers>> of the {companion} should be able to find some templates for the requirements' book structure.
 
-{check} {companionURL}/#_book_templates[Corresponding Artifact]
+{check} {companionURL}[Corresponding Artifact]
 //---- 
 
 === G.4 System overview
@@ -55,7 +59,7 @@ The main purpose of the {companion} is to complement the  {Handbook} by providin
 The _system_ under development in this specification is an unusual one: a book!
 It will serve as a companion for the {Handbook}.
 
-{missing} [Corresponding Artifact]
+{check} {companionURL}/#_book_templates[Corresponding Artifact]
 //---- 
 
 === G.5 Limitations and exclusions 
