--- a/changelog.adoc
+++ b/changelog.adoc
@@ -9,6 +9,7 @@
 | 1.1   | 2021-02-08 | Organization in separate books' files, by {jmb}
 | 1.2   | 2021-02-21 | Writing of the Process book, by {jmb}
 | 1.2.1 | 2021-02-29 | Minor improvements of verification rules, by {jmb}
+| 1.2.2 | 2021-04-16 | Minor improvements of goals, by {jmb}
 | _{version}_ | _{localdate}_ | _Current PDF version, by {jmb}_
 |=== 
 //----------------------------------------------
