--- a/System.adoc
+++ b/System.adoc
@@ -16,7 +16,7 @@ include::definitions.adoc[]
 
 === S.1 Components
 
-The components of the <<companion>> initially identified are the following:
+The components of the {companion} initially identified are the following:
 
 - [[s1-overview]] `{counter:s1}` An overview of the {Method} method.
 - [[s1-caseStudies]] `{counter:s1}` At least one case study ({Roborace})
