--- a/changelog.adoc
+++ b/changelog.adoc
@@ -1,4 +1,4 @@
-*CHANGELOG*
+= CHANGELOG
 
 //----------------------------------------------
 [cols="1,1,3",,options="header"]
@@ -10,6 +10,7 @@
 | 1.2   | 2021-02-21 | Writing of the Process book, by {jmb}
 | 1.2.1 | 2021-02-29 | Minor improvements of verification rules, by {jmb}
 | 1.2.2 | 2021-04-16 | Minor improvements of goals, by {jmb}
+| 1.2.3 | 2023-08-02 | Add an example of business constraint and its rational in E.3, by {jmb}
 | _{version}_ | _{localdate}_ | _Current PDF version, by {jmb}_
 |=== 
 //----------------------------------------------
